--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,20 @@ apply from: "$rootDir/constants.gradle"
 buildscript {
   ext {
     gradlePluginVersion = '3.0.0-beta6'
+    mavenPluginVersion = '1.4.1'
+    bintrayPlugin = '1.7'
   }
 
   repositories {
     jcenter()
+    google()
     maven { url 'https://maven.google.com/' }
   }
 
   dependencies {
     classpath "com.android.tools.build:gradle:$gradlePluginVersion"
+    classpath "com.github.dcendents:android-maven-gradle-plugin:$mavenPluginVersion"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintrayPlugin"
   }
 }
 
